--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   </head>
   <body>
     <div class="content h-card">
+      <img alt="Nat's Avatar!" src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar u-photo" />
+
       <h1 class="name-plate">Nat Welch</h1>
 
       <div class="text">
