trying Google as a provider

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- OPENID Settings -->
-    <link rel="openid.server"   href="https://openid.claimid.com/server" />
-    <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
+    <link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud" />
+    <link rel="openid2.local_id" href="https://plus.google.com/+NatWelch" />
 
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
