whoops, accidently deleted  rel="me"

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         Nat is scattered across the internet:
         <ul>
           <li>nat@natwelch.com</li>
-          <li>icco on <a href="http://github.com/icco">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco">Twitter</a></li>
-          <li>Nat W on <a href="http://www.flickr.com/photos/icco/">Flickr</a></li>
+          <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
+          <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
         </ul>
       </div>
 
@@ -53,7 +53,7 @@
         Some projects Nat has worked on include
         <ul class="sentence">
           <li><a href="http://tumble.io">Tumble.io</a></li>
-          <li><a href="http://pseudoweb.net">pseudoweb.net</a></li>
+          <li><a href="http://pseudoweb.net" rel="me">pseudoweb.net</a></li>
           <li><a href="http://fog.io">Fog</a></li>
           <li><a href="http://sadnat.com">sadnat.com</a></li>
           <li><a href="http://cloud.google.com/compute">GCE</a></li>
@@ -66,7 +66,7 @@
         <p style="padding-top: 20px;">
         Support my projects:
         <ul>
-          <li><a href="https://www.gittip.com/icco/">GitTip - @icco</a></li>
+          <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
           <li>BTC: 1ADE7f7WePGEpki3&shy;UqrUhRcgrcNyDDc8eq</li>
         </ul>
         </p>
