Starting work on next gen

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <![endif]-->
   </head>
   <body>
+    <div class="tinted-image"></div>
     <div class="content h-card">
       <img alt="Nat's Avatar!" src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar u-photo" />
 
@@ -75,10 +76,12 @@
 
     <!--include JS -->
     <!-- TODO: Use a CDN. -->
+    <!--
     <script type="text/javascript" src="/js/jquery.1.7.2.min.js"></script>
     <script type="text/javascript" src="/js/jquery.backstretch.min.js"></script>
     <script type="text/javascript" src="/js/moment.min.js"></script>
     <script type="text/javascript" src="/js/nat.js?v=v15"></script>
+    -->
     <!-- Copyright Nat Welch 2003 - 2014 -->
   </body>
 </html>
