--- a/index.html
+++ b/index.html
@@ -33,45 +33,46 @@
   <body>
     <div class="content h-card">
       <div class="pure-g">
-        <div class="pure-u-1-6">
+        <div class="pure-u-md-1-6 pure-u-1">
           <div class="logo">
             <img src="/i/natwelchlogo2.png" class="pure-img" alt="Nat? Nat. Nat!">
           </div>
         </div>
-        <div class="pure-u-5-6">
+        <div class="pure-u-md-5-6 pure-u-1">
           <h1 class="name-plate">Nat Welch</h1>
           <div class="text">
             Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
             Originally from the San Francisco Bay Area, Nat now lives in London.
           </div>
-          <div class="pure-g">
-            <div class="pure-u-1-2">
-              <div class="text">
-                <p>Nat is scattered across the internet:</p>
-                <ul>
-                  <li>nat@natwelch.com</li>
-                  <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
-                  <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="pure-u-1-2">
-              <div class="text">
-                <p>You can support his projects:</p>
-                <ul>
-                  <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
-                  <li>BTC: 1ADE7f7WePGEpki3&shy;UqrUhRcgrcNyDDc8eq</li>
-                </ul>
-              </div>
-            </div>
+        </div>
+      </div>
+
+      <div class="pure-g">
+        <div class="pure-u-md-1-6 pure-u-1"></div>
+        <div class="pure-u-md-1-2 pure-u-1">
+          <div class="text">
+            <p>Nat is scattered across the internet:</p>
+            <ul>
+              <li>nat@natwelch.com</li>
+              <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
+              <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="pure-u-md-1-3 pure-u-1">
+          <div class="text">
+            <p>You can support his projects:</p>
+            <ul>
+              <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
+              <li>BTC: 1ADE7f7WePGEpki3&shy;UqrUhRcgrcNyDDc8eq</li>
+            </ul>
           </div>
         </div>
       </div>
 
       <div class="pure-g">
-        <div class="pure-u-1-6">
-        </div>
-        <div class="pure-u-5-6">
+        <div class="pure-u-md-1-6 pure-u-1"></div>
+        <div class="pure-u-md-5-6 pure-u-1">
           <div class="text" style="text-align: left; margin: 1em 0;">
             Some projects Nat has worked on include
             <ul class="sentence">
@@ -94,6 +95,7 @@
               <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
               <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
             </ul>
+          </div>
         </div>
       </div>
     </div>
