--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   <body>
     <div class="content h-card">
       <div class="pure-g">
-        <div class="pure-u-md-1-6 pure-u-1">
+        <div class="pure-u-lg-1-6 pure-u-1">
           <div class="logo">
             <img src="/i/natwelchlogo2.png" class="pure-img" alt="Nat? Nat. Nat!">
           </div>
         </div>
-        <div class="pure-u-md-5-6 pure-u-1">
+        <div class="pure-u-lg-5-6 pure-u-1">
           <h1 class="name-plate">Nat Welch</h1>
           <div class="text">
             Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
@@ -48,8 +48,8 @@
       </div>
 
       <div class="pure-g">
-        <div class="pure-u-md-1-6 pure-u-1"></div>
-        <div class="pure-u-md-1-2 pure-u-1">
+        <div class="pure-u-lg-1-6 pure-u-1"></div>
+        <div class="pure-u-lg-1-2 pure-u-1">
           <div class="text">
             <p>Nat is scattered across the internet:</p>
             <ul>
@@ -59,7 +59,7 @@
             </ul>
           </div>
         </div>
-        <div class="pure-u-md-1-3 pure-u-1">
+        <div class="pure-u-lg-1-3 pure-u-1">
           <div class="text">
             <p>You can support his projects:</p>
             <ul>
@@ -71,8 +71,8 @@
       </div>
 
       <div class="pure-g">
-        <div class="pure-u-md-1-6 pure-u-1"></div>
-        <div class="pure-u-md-5-6 pure-u-1">
+        <div class="pure-u-lg-1-6 pure-u-1"></div>
+        <div class="pure-u-lg-5-6 pure-u-1">
           <div class="text" style="text-align: left; margin: 1em 0;">
             Some projects Nat has worked on include
             <ul class="sentence">
