include the responsive css

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <!--[if lte IE 8]>
+      <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+      <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+    <!--<![endif]-->
     <link rel="stylesheet" type="text/css" href="/css/style.css?v=16">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
