--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>You can support his projects:</p>
             <ul>
               <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
-              <li>BTC: 1ADE7f7WePGEpki3&shy;UqrUhRcgrcNyDDc8eq</li>
+              <li>BTC: <a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">1DLPvAutrvdEjnmne&shy;HoYcP6o5yDCtx9u6k</a>
             </ul>
           </div>
         </div>
