link to mood, tumble to code

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               <li><a href="http://sadnat.com">sadnat.com</a></li>
               <li><a href="http://cloud.google.com/compute">GCE</a></li>
               <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
+              <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
               <li><a href="http://quotes.natwelch.com">Quotes</a></li>
               <li><a href="https://icco.github.io/karl/">Karl</a></li>
             </ul>
@@ -99,7 +100,7 @@
           <div class="text" style="text-align: left; margin: 1em 0;">
             Some of projects he enjoyed working on are sadly defunct, including 
             <ul class="sentence">
-              <li><a href="http://tumble.io">Tumble.io</a></li>
+              <li><a href="http://github.com/icco/tumble">Tumble.io</a></li>
               <li><a href="http://pgp.io">pgp.io</a></li>
               <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
               <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
