--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <li><a href="http://cloud.google.com/compute">GCE</a></li>
               <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
               <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
+              <li><a href="http://code.natwelch.com">Code History</a></li>
               <li><a href="http://quotes.natwelch.com">Quotes</a></li>
               <li><a href="https://icco.github.io/karl/">Karl</a></li>
             </ul>
