--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
               <li><a href="http://fog.io">Fog</a></li>
               <li><a href="http://sadnat.com">sadnat.com</a></li>
               <li><a href="http://cloud.google.com/compute">GCE</a></li>
+              <li><a href="https://status.cloud.google.com/">GCP Status</a></li>
               <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
               <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
               <li><a href="http://code.natwelch.com">Code History</a></li>
