--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="pure-u-sm-5-6 pure-u-1">
           <h1 class="name-plate">Nat Welch</h1>
           <div class="text">
-            Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
-            Originally from the San Francisco Bay Area, Nat now lives in London.
+            Nat is a Software Reconnaissance Engineer and is currently exploring the intersection of technology and art at the <a href="https://www.recurse.com/">Recurse Center</a> in NYC. He has worked at great companies such as <a href="http://cloud.google.com">Google</a>, <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
+            Originally from the San Francisco Bay Area, Nat spent a year or so in London and now lives in NYC.
           </div>
         </div>
       </div>
