--- a/index.html
+++ b/index.html
@@ -21,99 +21,119 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/pure-min.css">
-    <!--[if lte IE 8]>
-      <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-      <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
-    <!--<![endif]-->
-    <link rel="stylesheet" type="text/css" href="/css/style.css?v=16">
+    <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css">
+    <style>
+      ul.sentence {
+        padding: 0;
+        margin: 0;
+        text-align: left;
+        display: inline;
+        list-style: none;
+      }
+
+      ul.sentence li {
+        display: inline;
+        margin: 0;
+      }
+
+      ul.sentence li:after {
+        content: ", ";
+      }
+
+      ul.sentence li:last-child:after {
+        content: ".";
+      }
+
+      ul.sentence li:nth-last-child(2):after {
+        content: " & ";
+      }
+
+      /* Based on http://mrmrs.io/links/ */
+      a, a:link, a:visited {
+        transition: color .4s;
+        color: #265C83;
+      }
+
+      a:hover {
+        color: #7FDBFF;
+      }
+
+      a:active {
+        transition: color .3s;
+        color: #007BE6;
+      }
+    </style>
 
     <!-- Webmention -->
     <!-- https://writing.natwelch.com/ -->
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div class="content h-card">
-      <div class="pure-g">
-        <div class="pure-u-sm-1-6 pure-u-1">
-          <div class="logo">
-            <img src="/i/natwelchlogo2.png" class="pure-img" alt="Nat? Nat. Nat!">
-          </div>
+    <div class="mw7 h-card">
+      <header class="pal">
+      <div class="dt">
+        <div class="dtc w3 prm prn-ns">
+          <img src="/i/natwelchlogo2.png" class="" alt="Nat? Nat. Nat!">
         </div>
-        <div class="pure-u-sm-5-6 pure-u-1">
-          <h1 class="name-plate">Nat Welch</h1>
-          <div class="text">
-            <p>
-            Nat is a Software Reconnaissance Engineer and is currently exploring the intersection of technology and art at the <a href="https://www.recurse.com/">Recurse Center</a> in NYC. He has worked at great companies such as <a href="http://cloud.google.com">Google</a>, <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
-            </p>
-            <p>
-            Originally from the San Francisco Bay Area, Nat spent a year or so in London and now lives in NYC. Nat is not actively looking for a job right now, but he has <a href="http://natwelch.com/resume/">a resume</a>.
-            </p>
-          </div>
+        <div class="dtc v-mid w-100 plm">
+          <h1 class="f2 ttu lh-title mvn">Nat</h1>
+          <h1 class="f2 ttu lh-title mvn">Welch</h1>
         </div>
       </div>
+      </header>
+      <main class="phl ptn pbl lh-copy">
+      <p>
+      Nat is a Software Reconnaissance Engineer and is currently exploring the intersection of technology and art at the <a href="https://www.recurse.com/">Recurse Center</a> in NYC. He has worked at great companies such as <a href="http://cloud.google.com">Google</a>, <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
+      </p>
 
-      <div class="pure-g">
-        <div class="pure-u-sm-1-6 pure-u-1"></div>
-        <div class="pure-u-sm-5-12 pure-u-1">
-          <div class="text">
-            <p>Nat is scattered across the internet:</p>
-            <ul>
-              <li>nat@natwelch.com</li>
-              <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
-              <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="pure-u-sm-5-12 pure-u-1">
-          <div class="text">
-            <p>You can support his projects:</p>
-            <ul>
-              <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
-              <li>BTC: <a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">1DLPvAutrvdEjnmne&shy;HoYcP6o5yDCtx9u6k</a>
-            </ul>
-          </div>
-        </div>
-      </div>
+      <p>
+      Originally from the San Francisco Bay Area, Nat spent a year or so in London and now lives in NYC. Nat is not actively looking for a job right now, but he has <a href="http://natwelch.com/resume/">a resume</a>.
+      </p>
 
-      <div class="pure-g">
-        <div class="pure-u-sm-1-6 pure-u-1"></div>
-        <div class="pure-u-sm-5-6 pure-u-1">
-          <div class="text" style="text-align: left; margin: 1em 0;">
-            Some projects Nat has worked on include
-            <ul class="sentence">
-              <li><a href="http://pseudoweb.net" rel="me">pseudoweb.net</a></li>
-              <li><a href="http://writing.natwelch.com" rel="me">Nat? Nat. Nat!</a></li>
-              <li><a href="http://fog.io">Fog</a></li>
-              <li><a href="http://sadnat.com">sadnat.com</a></li>
-              <li><a href="http://cloud.google.com/compute">GCE</a></li>
-              <li><a href="https://status.cloud.google.com/">GCP Status</a></li>
-              <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
-              <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
-              <li><a href="http://code.natwelch.com">Code History</a></li>
-              <li><a href="http://quotes.natwelch.com">Quotes</a></li>
-              <li><a href="https://icco.github.io/karl/">Karl</a></li>
-            </ul>
-          </div>
+      <p>Nat is scattered across the internet:</p>
+      <ul>
+        <li>nat@natwelch.com</li>
+        <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
+        <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
+      </ul>
 
-          <div class="text" style="text-align: left; margin: 1em 0;">
-            Some of projects he enjoyed working on are sadly defunct, including 
-            <ul class="sentence">
-              <li><a href="http://github.com/icco/tumble">Tumble.io</a></li>
-              <li><a href="http://pgp.io">pgp.io</a></li>
-              <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
-              <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      <p>You can support his projects:</p>
+      <ul>
+        <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
+        <li>BTC: <a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">1DLPvAutrvdEjnmne&shy;HoYcP6o5yDCtx9u6k</a>
+      </ul>
+
+      <p class="di">Some projects Nat has worked on include</p>
+      <ul class="sentence">
+        <li><a href="http://pseudoweb.net" rel="me">pseudoweb.net</a></li>
+        <li><a href="http://writing.natwelch.com" rel="me">Nat? Nat. Nat!</a></li>
+        <li><a href="http://fog.io">Fog</a></li>
+        <li><a href="http://sadnat.com">sadnat.com</a></li>
+        <li><a href="http://cloud.google.com/compute">GCE</a></li>
+        <li><a href="https://status.cloud.google.com/">GCP Status</a></li>
+        <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
+        <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
+        <li><a href="http://code.natwelch.com">Code History</a></li>
+        <li><a href="http://quotes.natwelch.com">Quotes</a></li>
+        <li><a href="https://icco.github.io/karl/">Karl</a></li>
+        <li><a href="http://playhyperspace.com">Hyperspace</a></li>
+        <li><a href="https://github.com/pselle/shhparty">shhparty</a></li>
+      </ul>
+
+      <p class="di">
+      Some of projects he enjoyed working on are sadly defunct, including
+      </p>
+      <ul class="sentence">
+        <li><a href="http://github.com/icco/tumble">Tumble.io</a></li>
+        <li><a href="http://pgp.io">pgp.io</a></li>
+        <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
+        <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
+      </ul>
+      </main>
     </div>
 
     <script>
