tweaks for new tachy

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css">
     <style>
+      img {
+        display: block;
+      }
+
       ul.sentence {
         padding: 0;
         margin: 0;
@@ -73,10 +77,10 @@
     <![endif]-->
   </head>
   <body>
-    <div class="mw7 h-card">
-      <header class="pal">
+    <div class="mw7 h-card sans-serif">
+      <header class="pvm phl">
       <div class="dt">
-        <div class="dtc w3 prm prn-ns">
+        <div class="dtc w3 prn">
           <img src="/i/natwelchlogo2.png" class="" alt="Nat? Nat. Nat!">
         </div>
         <div class="dtc v-mid w-100 plm">
@@ -94,45 +98,53 @@
       Originally from the San Francisco Bay Area, Nat spent a year or so in London and now lives in NYC. Nat is not actively looking for a job right now, but he has <a href="http://natwelch.com/resume/">a resume</a>.
       </p>
 
+      <div>
       <p>Nat is scattered across the internet:</p>
       <ul>
         <li>nat@natwelch.com</li>
         <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
         <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
       </ul>
+      </div>
 
+      <div>
       <p>You can support his projects:</p>
       <ul>
         <li><a href="https://www.gittip.com/icco/" rel="me">GitTip - @icco</a></li>
         <li>BTC: <a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">1DLPvAutrvdEjnmne&shy;HoYcP6o5yDCtx9u6k</a>
       </ul>
+      </div>
 
-      <p class="di">Some projects Nat has worked on include</p>
-      <ul class="sentence">
-        <li><a href="http://pseudoweb.net" rel="me">pseudoweb.net</a></li>
-        <li><a href="http://writing.natwelch.com" rel="me">Nat? Nat. Nat!</a></li>
-        <li><a href="http://fog.io">Fog</a></li>
-        <li><a href="http://sadnat.com">sadnat.com</a></li>
-        <li><a href="http://cloud.google.com/compute">GCE</a></li>
-        <li><a href="https://status.cloud.google.com/">GCP Status</a></li>
-        <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
-        <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
-        <li><a href="http://code.natwelch.com">Code History</a></li>
-        <li><a href="http://quotes.natwelch.com">Quotes</a></li>
-        <li><a href="https://icco.github.io/karl/">Karl</a></li>
-        <li><a href="http://playhyperspace.com">Hyperspace</a></li>
-        <li><a href="https://github.com/pselle/shhparty">shhparty</a></li>
-      </ul>
+      <div class="mvm">
+        <p class="di">Some projects Nat has worked on include</p>
+        <ul class="sentence">
+          <li><a href="http://pseudoweb.net" rel="me">pseudoweb.net</a></li>
+          <li><a href="http://writing.natwelch.com" rel="me">Nat? Nat. Nat!</a></li>
+          <li><a href="http://fog.io">Fog</a></li>
+          <li><a href="http://sadnat.com">sadnat.com</a></li>
+          <li><a href="http://cloud.google.com/compute">GCE</a></li>
+          <li><a href="https://status.cloud.google.com/">GCP Status</a></li>
+          <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
+          <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
+          <li><a href="http://code.natwelch.com">Code History</a></li>
+          <li><a href="http://quotes.natwelch.com">Quotes</a></li>
+          <li><a href="https://icco.github.io/karl/">Karl</a></li>
+          <li><a href="http://playhyperspace.com">Hyperspace</a></li>
+          <li><a href="https://github.com/pselle/shhparty">shhparty</a></li>
+        </ul>
+      </div>
 
-      <p class="di">
-      Some of projects he enjoyed working on are sadly defunct, including
-      </p>
-      <ul class="sentence">
-        <li><a href="http://github.com/icco/tumble">Tumble.io</a></li>
-        <li><a href="http://pgp.io">pgp.io</a></li>
-        <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
-        <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
-      </ul>
+      <div class="mvm">
+        <p class="di">
+        Some of projects he enjoyed working on are sadly defunct, including
+        </p>
+        <ul class="sentence">
+          <li><a href="http://github.com/icco/tumble">Tumble.io</a></li>
+          <li><a href="http://pgp.io">pgp.io</a></li>
+          <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
+          <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
+        </ul>
+      </div>
       </main>
     </div>
 
