--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
       </div>
       </header>
       <main class="phl ptn pbl lh-copy">
-      <p>
-      Nat is a Software Reconnaissance Engineer and is currently exploring the intersection of technology and art at the <a href="https://www.recurse.com/">Recurse Center</a> in NYC. He has worked at great companies such as <a href="http://cloud.google.com">Google</a>, <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
-      </p>
+      <p>Nat currently works at <a href="http://littlebits.cc">LittleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
 
-      <p>
-      Originally from the San Francisco Bay Area, Nat spent a year or so in London and now lives in NYC. Nat is not actively looking for a job right now, but he has <a href="http://natwelch.com/resume/">a resume</a>.
-      </p>
+      <p>In the past, Nat attended the <a href="https://www.recurse.com/">Recuse Center</a> in NYC, worked at Google in three offices (Mountain View, San Francisco and London), and built websites for <a href="https://www.ifixit.com/">iFixit</a> and <a href="http://getpunchd.com/">Punchd</a> in San Luis Obispo. He also has had other jobs at places like <a href="https://www.adobe.com/">Adobe</a>, <a href="https://en.wikipedia.org/wiki/Pacific_Skyline_Council#Camps">Oljato</a> and <a href="http://www.sonoma-county.org/isd/">Sonoma County</a>.</p>
+
+      <p>At work and while at play, Nat loves to explore the interaction between art, communication, technology and design using software. When he is not coding, Nat tends to be listening to music and wandering a city looking for a coffee shop to read and write in.</p>
 
       <div>
       <p>Nat is scattered across the internet:</p>
