--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css?date=20151014">
     <style>
       img {
         display: block;
