--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
       <header class="pvm phl">
       <div class="dt">
         <div class="dtc w3 prn">
-          <img src="/i/natwelchlogo2.png" class="" alt="Nat? Nat. Nat!">
+          <img src="/i/natwelchlogo2.png" class="mbs" alt="Nat? Nat. Nat!">
         </div>
-        <div class="dtc v-mid w-100 plm">
-          <h1 class="f2 ttu lh-title mvn">Nat</h1>
-          <h1 class="f2 ttu lh-title mvn">Welch</h1>
+        <div class="dtc v-btm w-100 plm">
+          <h1 class="lh-title mvn book">Nat Welch</h1>
         </div>
       </div>
       </header>
