--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 
       <p>At work and while at play, Nat loves to explore the interaction between art, communication, technology and design using software. When he is not coding, Nat tends to be listening to music and wandering a city looking for a coffee shop to read and write in.</p>
 
+      <!-- NOTE: Maybe move these into seperate tabbed things? -->
+
       <div>
       <p>Nat is scattered across the internet:</p>
       <ul>
