--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
         </ul>
       </div>
       </section>
+      <div>
+        <ul>
+          <li><a href="#one">One</a></li>
+          <li><a href="#two">Two</a></li>
+          <li><a href="#three">Three</a></li>
+        </ul>
+      </div>
       </main>
     </div>
 
