--- a/index.html
+++ b/index.html
@@ -158,14 +158,34 @@
       </section>
       <div>
         <ul>
-          <li><a href="#one">One</a></li>
-          <li><a href="#two">Two</a></li>
-          <li><a href="#three">Three</a></li>
+          <li><a onclick="one()">One</a></li>
+          <li><a onclick="two()">Two</a></li>
+          <li><a onclick="three()">Three</a></li>
         </ul>
       </div>
       </main>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>
+      function one() {
+        $('#two').hide();
+        $('#three').hide();
+        $('#one').show();
+      }
+
+      function two() {
+        $('#one').hide();
+        $('#three').hide();
+        $('#two').show();
+      }
+
+      function three() {
+        $('#one').hide();
+        $('#two').hide();
+        $('#three').show();
+      }
+    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
