--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nat Welch dot com</title>
 
     <!-- Meta SEO Shit -->
-    <meta name="description" content="The homepage of Nathaniel 'Nat' Welch." />
+    <meta name="description" content="Nathaniel 'Nat' Welch, Software Reconnaissance Engineer extrordinair." />
     <meta name="keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
     <meta name="author" content="Nat Welch">
 
@@ -71,7 +71,7 @@
         cursor: pointer;
       }
 
-      /* Starting layou */
+      /* Starting layout */
       #one {
         display: block;
       }
@@ -103,7 +103,7 @@
       </header>
       <main class="phl ptn pbl lh-copy">
       <section id="one">
-      <p>Nat currently works at <a href="http://littlebits.cc">LittleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
+      <p>Nat currently works at <a href="http://littlebits.cc">littleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
 
       <p>In the past, Nat attended the <a href="https://www.recurse.com/">Recuse Center</a> in NYC, worked at Google in three offices (Mountain View, San Francisco and London), and built websites for <a href="https://www.ifixit.com/">iFixit</a> and <a href="http://getpunchd.com/">Punchd</a> in San Luis Obispo. He also has had other jobs at places like <a href="https://www.adobe.com/">Adobe</a>, <a href="https://en.wikipedia.org/wiki/Pacific_Skyline_Council#Camps">Oljato</a> and <a href="http://www.sonoma-county.org/isd/">Sonoma County</a>.</p>
 
@@ -161,6 +161,7 @@
         </ul>
       </div>
       </section>
+
       <section>
         <ul class="list phn w-100">
           <li class="dib tc fl w-33"><a class="btn" onclick="one()">About</a></li>
