--- a/index.html
+++ b/index.html
@@ -92,14 +92,11 @@
   <body>
     <div class="mw6 h-card bodoni center tj">
       <header class="pvm phl">
-      <div class="dt">
-        <div class="dtc w3 prn">
-          <img src="/i/natwelchlogo2.png" class="mbs" alt="Nat? Nat. Nat!">
+        <div class="db center tc lh-title book">
+          <h1 class="mvn di">Nat
+          <img src="/i/natwelchlogo2.png" class="v-mid mhn di phn w3" alt="Nat? Nat. Nat!">
+          Welch</h1>
         </div>
-        <div class="dtc v-btm w-100 plm">
-          <h1 class="lh-title mvn book">Nat Welch</h1>
-        </div>
-      </div>
       </header>
       <main class="phl ptn pbl lh-copy">
       <section id="one">
