--- a/index.html
+++ b/index.html
@@ -92,15 +92,22 @@
   <body>
     <div class="mw6 h-card bodoni center tj">
       <header class="pvm phl">
-        <div class="db center tc lh-title book">
-          <h1 class="mvn di">Nat
-          <img src="/i/natwelchlogo2.png" class="v-mid mhn di phn w3" alt="Nat? Nat. Nat!">
-          Welch</h1>
-        </div>
+      <div class="db center tc lh-title book">
+        <img src="/i/natwelchlogo2.png" class="v-mid mhn di phn w3" alt="Nat? Nat. Nat!">
+      </div>
+
+      <nav class="">
+      <ul class="list phn w-100">
+        <li class="mvm dib tc fl w-33"><a class="btn" onclick="one()">About</a></li>
+        <li class="mvm dib tc fl w-33"><a class="btn" onclick="two()">Links</a></li>
+        <li class="mvm dib tc fl w-33"><a class="btn" onclick="three()">Projects</a></li>
+      </ul>
+      </nav>
       </header>
+
       <main class="phl ptn pbl lh-copy">
       <section id="one">
-      <p>Nat currently works at <a href="http://littlebits.cc">littleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
+      <p>Nat Welch currently works at <a href="http://littlebits.cc">littleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
 
       <p>In the past, Nat attended the <a href="https://www.recurse.com/">Recuse Center</a> in NYC, worked at Google in three offices (Mountain View, San Francisco and London), and built websites for <a href="https://www.ifixit.com/">iFixit</a> and <a href="http://getpunchd.com/">Punchd</a> in San Luis Obispo. He also has had other jobs at places like <a href="https://www.adobe.com/">Adobe</a>, <a href="https://en.wikipedia.org/wiki/Pacific_Skyline_Council#Camps">Oljato</a> and <a href="http://www.sonoma-county.org/isd/">Sonoma County</a>.</p>
 
@@ -157,14 +164,6 @@
           <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
         </ul>
       </div>
-      </section>
-
-      <section>
-        <ul class="list phn w-100">
-          <li class="dib tc fl w-33"><a class="btn" onclick="one()">About</a></li>
-          <li class="dib tc fl w-33"><a class="btn" onclick="two()">Links</a></li>
-          <li class="dib tc fl w-33"><a class="btn" onclick="three()">Projects</a></li>
-        </ul>
       </section>
       </main>
     </div>
