--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
         <p>You can support his projects:</p>
         <ul>
           <li><a href="https://gratipay.com/~icco/" rel="me">gratipay/icco</a></li>
-          <li>BTC: <a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">1DLPvAutrvdEjnmne&shy;HoYcP6o5yDCtx9u6k</a>
+          <li><a href="https://cash.me/$icco" rel="me">cash.me/$icco</a></li>
+          <li><a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">Bitcoin</a>
         </ul>
       </div>
       </section>
