--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
   </head>
   <body>
     <div class="mw6 h-card bodoni center tj">
-      <header class="pvm phl">
+      <header class="pvm phl mtm">
       <div class="db center tc lh-title book">
         <img src="/i/natwelchlogo2.png" class="v-mid mhn di phn w3" alt="Nat? Nat. Nat!">
       </div>
 
       <nav class="">
       <ul class="list phn w-100">
-        <li class="mvm dib tc fl w-33"><a class="btn" onclick="one()">About</a></li>
-        <li class="mvm dib tc fl w-33"><a class="btn" onclick="two()">Links</a></li>
-        <li class="mvm dib tc fl w-33"><a class="btn" onclick="three()">Projects</a></li>
+        <li class="pvs mvm dib tc fl w-33"><a class="btn" onclick="one()">About</a></li>
+        <li class="pvs mvm dib tc fl w-33"><a class="btn" onclick="two()">Links</a></li>
+        <li class="pvs mvm dib tc fl w-33"><a class="btn" onclick="three()">Projects</a></li>
       </ul>
       </nav>
       </header>
