spelling and links

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
       <section id="one">
       <p>Nat Welch currently works at <a href="http://littlebits.cc">littleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
 
-      <p>In the past, Nat attended the <a href="https://www.recurse.com/">Recuse Center</a> in NYC, worked at Google in three offices (Mountain View, San Francisco and London), and built websites for <a href="https://www.ifixit.com/">iFixit</a> and <a href="http://getpunchd.com/">Punchd</a> in San Luis Obispo. He also has had other jobs at places like <a href="https://www.adobe.com/">Adobe</a>, <a href="https://en.wikipedia.org/wiki/Pacific_Skyline_Council#Camps">Oljato</a> and <a href="http://www.sonoma-county.org/isd/">Sonoma County</a>.</p>
+      <p>In the past, Nat attended the <a href="https://www.recurse.com/">Recurse Center</a> in NYC, worked at Google in three offices (Mountain View, San Francisco and London) on three projects (<a href="https://en.wikipedia.org/wiki/Google_Offers">Google Offers</a>, <a href="https://en.wikipedia.org/wiki/Google_Storage">Google Cloud Storage</a> and <a href="https://en.wikipedia.org/wiki/Google_Compute_Engine">Google Compute Engine</a>), and built websites for <a href="https://www.ifixit.com/">iFixit</a> and <a href="http://getpunchd.com/">Punchd</a> in San Luis Obispo. He also has had other jobs at places like <a href="https://www.adobe.com/">Adobe</a>, <a href="https://en.wikipedia.org/wiki/Pacific_Skyline_Council#Camps">Oljato</a> and <a href="http://www.sonoma-county.org/isd/">Sonoma County</a>.</p>
 
-      <p>At work and while at play, Nat loves to explore the interaction between art, communication, technology and design using software. When he is not coding, Nat tends to be listening to music and wandering a city looking for a coffee shop to read and write in.</p>
+      <p>While at work and at play, Nat loves to explore the interaction between art, communication, technology and design using software. When he is not coding, Nat tends to be listening to music and wandering a city looking for a coffee shop to read and write in.</p>
       </section>
 
       <section id="two">
