--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css?date=20151014">
     <style>
+      body {
+        font-size: 1.35rem;
+      }
+
       img {
         display: block;
       }
@@ -198,6 +202,7 @@
       ga('create', 'UA-333449-2', 'auto');
       ga('send', 'pageview');
     </script>
+
     <!-- Copyright Nat Welch 2003 - 2015 -->
   </body>
 </html>
