--- a/index.html
+++ b/index.html
@@ -93,106 +93,30 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <div class="mw6 h-card bodoni center tj">
-      <header class="pvm phl mtm">
-      <div class="db center tc lh-title book">
-        <img src="/i/natwelchlogo2.png" class="v-mid mhn di phn w3" alt="Nat? Nat. Nat!">
+  <body class="sans-serif">
+    <header class="pvx phm pax-m paxl-l black oh pos-rel bg-near-white">
+    <div class="dt wi-100">
+      <div class="dtc wi-50 v-mid dk-gray">
+        <img src="/i/dots.png" class="v-mid mhn di phn w4" alt="Nat? Nat. Nat!">
+        <div class="dib v-mid">
+          <h1 class="man">Nat Welch</h1>
+          <h2 class="ttu f4 man">Software Reconnaissance Engineer</h2>
+        </div>
       </div>
-
-      <nav class="">
-      <ul class="list phn w-100">
-        <li class="pvs mvm dib tc fl w-33"><a class="btn" onclick="one()">About</a></li>
-        <li class="pvs mvm dib tc fl w-33"><a class="btn" onclick="two()">Links</a></li>
-        <li class="pvs mvm dib tc fl w-33"><a class="btn" onclick="three()">Projects</a></li>
-      </ul>
-      </nav>
-      </header>
-
-      <main class="phl ptn pbl lh-copy">
-      <section id="one">
-      <p>Nat Welch currently works at <a href="http://littlebits.cc">littleBits</a>. While his official title there is &#8220;Technical Lead&#8221;, Nat prefers to go by the title &#8220;Software Reconnaissance Engineer&#8221;.</p>
-
-      <p>In the past, Nat attended the <a href="https://www.recurse.com/">Recurse Center</a> in NYC, worked at Google in three offices (Mountain View, San Francisco and London) on three projects (<a href="https://en.wikipedia.org/wiki/Google_Offers">Google Offers</a>, <a href="https://en.wikipedia.org/wiki/Google_Storage">Google Cloud Storage</a> and <a href="https://en.wikipedia.org/wiki/Google_Compute_Engine">Google Compute Engine</a>), and built websites for <a href="https://www.ifixit.com/">iFixit</a> and <a href="http://getpunchd.com/">Punchd</a> in San Luis Obispo. He also has had other jobs at places like <a href="https://www.adobe.com/">Adobe</a>, <a href="https://en.wikipedia.org/wiki/Pacific_Skyline_Council#Camps">Oljato</a> and <a href="http://www.sonoma-county.org/isd/">Sonoma County</a>.</p>
-
-      <p>While at work and at play, Nat loves to explore the interaction between art, communication, technology and design using software. When he is not coding, Nat tends to be listening to music and wandering a city looking for a coffee shop to read and write in.</p>
-      </section>
-
-      <section id="two">
-      <div>
-        <p>Nat is scattered across the internet:</p>
-        <ul>
-          <li>nat@natwelch.com</li>
-          <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
-          <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <p>You can support his projects:</p>
-        <ul>
-          <li><a href="https://gratipay.com/~icco/" rel="me">gratipay/icco</a></li>
-          <li><a href="https://cash.me/$icco" rel="me">cash.me/$icco</a></li>
-          <li><a class="coinbase-button" data-code="dc772242021f52447d3d5ceba5559e2a" data-button-style="custom_small" href="https://www.coinbase.com/checkouts/dc772242021f52447d3d5ceba5559e2a">Bitcoin</a>
-        </ul>
-      </div>
-      </section>
-
-      <section id="three">
-      <div class="mvm">
-        <p class="di">Some projects Nat has worked on include</p>
-        <ul class="sentence">
-          <li><a href="http://pseudoweb.net" rel="me">pseudoweb.net</a></li>
-          <li><a href="http://writing.natwelch.com" rel="me">Nat? Nat. Nat!</a></li>
-          <li><a href="http://fog.io">Fog</a></li>
-          <li><a href="http://sadnat.com">sadnat.com</a></li>
-          <li><a href="http://cloud.google.com/compute">GCE</a></li>
-          <li><a href="https://status.cloud.google.com/">GCP Status</a></li>
-          <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
-          <li><a href="http://mood.natwelch.com">Nat's Inspiration</a></li>
-          <li><a href="http://code.natwelch.com">Code History</a></li>
-          <li><a href="http://quotes.natwelch.com">Quotes</a></li>
-          <li><a href="https://icco.github.io/karl/">Karl</a></li>
-          <li><a href="http://playhyperspace.com">Hyperspace</a></li>
-          <li><a href="https://github.com/pselle/shhparty">shhparty</a></li>
-        </ul>
-      </div>
-
-      <div class="mvm">
-        <p class="di">
-        Some of projects he enjoyed working on are sadly defunct, including
-        </p>
-        <ul class="sentence">
-          <li><a href="http://github.com/icco/tumble">Tumble.io</a></li>
-          <li><a href="http://pgp.io">pgp.io</a></li>
-          <li><a href="https://github.com/icco/dungeontracker">DungeonTracker</a></li>
-          <li><a href="https://github.com/icco/twomonths">Two Months</a></li>
-        </ul>
-      </div>
-      </section>
-      </main>
     </div>
+    </header>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script>
-      function one() {
-        $('#two').hide();
-        $('#three').hide();
-        $('#one').show();
-      }
+    <main class="phl ptn pbl lh-copy">
+    <div>
+      <ul>
+        <li>nat@natwelch.com</li>
+        <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
+        <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
+        <li><a href="https://cash.me/$icco" rel="me">cash.me/$icco</a></li>
+      </ul>
+    </div>
+    </main>
 
-      function two() {
-        $('#one').hide();
-        $('#three').hide();
-        $('#two').show();
-      }
-
-      function three() {
-        $('#one').hide();
-        $('#two').hide();
-        $('#three').show();
-      }
-    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -203,6 +127,6 @@
       ga('send', 'pageview');
     </script>
 
-    <!-- Copyright Nat Welch 2003 - 2015 -->
+    <!-- Copyright Nat Welch 2003 - 2016 -->
   </body>
 </html>
