--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     <![endif]-->
   </head>
   <body class="sans-serif">
-    <header class="pvx phm pax-m paxl-l black oh pos-rel bg-near-white">
+    <header class="pvx phm pax-m paxl-l oh pos-rel bg-darkest-orange">
     <div class="dt wi-100">
-      <div class="dtc wi-50 v-mid dk-gray">
-        <img src="/i/dots.png" class="v-mid mhn di phn w4" alt="Nat? Nat. Nat!">
+      <div class="dtc wi-50 v-mid white">
+        <img src="/i/whitedots.png" class="v-mid mhn di phn w4" alt="Nat? Nat. Nat!">
         <div class="dib v-mid">
           <h1 class="man">Nat Welch</h1>
           <h2 class="ttu f4 man">Software Reconnaissance Engineer</h2>
@@ -106,26 +106,42 @@
     </div>
     </header>
 
-    <main class="phl ptn pbl lh-copy">
-    <div>
-      <ul>
-        <li>nat@natwelch.com</li>
-        <li>icco on <a href="http://github.com/icco" rel="me">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco" rel="me">Twitter</a></li>
-        <li>Nat W on <a href="http://www.flickr.com/photos/icco/" rel="me">Flickr</a></li>
-        <li><a href="https://cash.me/$icco" rel="me">cash.me/$icco</a></li>
-      </ul>
+    <main>
+
+    <section class="cf">
+    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+      <div>
+        <h1 class="small ttu fw4">What</h1>
+        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
+        Trying to make the web as fast as possible, highly readable, 100% responsive, and easy to navigate.
+        </p>
+        <p class="f5 f2-ns mw8 measure lh-copy">
+        I like building tools that help make designing in the browser a little easier.
+        </p>
+        <p class="f5 f2-ns mw7 measure lh-copy">
+        Advocate for users and open-source.
+        </p>
+      </div>
     </div>
+    </section>
+
+    <section class="cf">
+    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+      <div>
+        <h1 class="small ttu fw4">Who</h1>
+        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
+        A <span id="age">28</span> year old man from the San Francisco bay area, now living in Brooklyn.
+        </p>
+      </div>
+    </div>
+    </section>
     </main>
 
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-333449-2', 'auto');
-      ga('send', 'pageview');
     </script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="/js/nat.js"></script>
 
     <!-- Copyright Nat Welch 2003 - 2016 -->
   </body>
