--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
       <div>
         <h1 class="small ttu fw4">What</h1>
         <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
-        Trying to make the web as fast as possible, highly readable, 100% responsive, and easy to navigate.
+        Attempting to promote communication, creativity and sharing on the Internet.
         </p>
         <p class="f5 f2-ns mw8 measure lh-copy">
-        I like building tools that help make designing in the browser a little easier.
+        I like automating things and building software tools to make maintaing dynamic websites easier.
         </p>
         <p class="f5 f2-ns mw7 measure lh-copy">
-        Advocate for users and open-source.
+        Advocate for transparency, remix culture and open source software.
         </p>
       </div>
     </div>
