clean up scritps

--- a/index.html
+++ b/index.html
@@ -137,11 +137,8 @@
     </section>
     </main>
 
-    <script>
-    </script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="/js/nat.js"></script>
+    <script src="/js/nat.js?v=2016-01-24"></script>
 
     <!-- Copyright Nat Welch 2003 - 2016 -->
   </body>
