--- a/index.html
+++ b/index.html
@@ -135,9 +135,24 @@
       </div>
     </div>
     </section>
+
+    <section class="cf">
+    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+      <div>
+        <h1 class="small ttu fw4">Writing</h1>
+        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
+        I write once or twice a week at <a href="https://writing.natwelch.com" rel="me">writing.natwelch.com</a>.
+        </p>
+
+        <ul id="posts" class="f5 f2-ns mw7 measure lh-copy">
+        </ul>
+      </div>
+    </div>
+    </section>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="/js/moment.min.js?v=2.11.1"></script>
     <script src="/js/nat.js?v=2016-01-24"></script>
 
     <!-- Copyright Nat Welch 2003 - 2016 -->
