--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <header class="pvx phm pax-m paxl-l oh pos-rel bg-darkest-orange">
     <div class="dt wi-100">
       <div class="dtc wi-50 v-mid white">
-        <img src="/i/whitedots.png" class="v-mid mhn di phn w4" alt="Nat? Nat. Nat!">
+        <img src="/i/whitedots.png" class="v-mid mhn di phn w4-ns w3" alt="Nat? Nat. Nat!">
         <div class="dib v-mid">
-          <h1 class="man">Nat Welch</h1>
+          <h1 class="man f3 f1-ns">Nat Welch</h1>
           <h2 class="ttu f4 man">Software Reconnaissance Engineer</h2>
         </div>
       </div>
@@ -130,7 +130,7 @@
       <div>
         <h1 class="small ttu fw4">Who</h1>
         <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
-        A <span id="age">28</span> year old man from the San Francisco bay area, now living in Brooklyn.
+        A <span id="age">28</span> year old man from the San Francisco Bay Area, now living in Brooklyn.
         </p>
       </div>
     </div>
