--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
       </div>
     </div>
     </section>
+
+    <section class="cf">
+    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+      <div>
+        <h1 class="small ttu fw4">Other</h1>
+        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
+        I post photos with varying consistency on <a href="https://www.flickr.com/photos/icco/">Flickr</a>.
+      </div>
+    </div>
+    </section>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
