--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
     <![endif]-->
   </head>
   <body class="sans-serif">
-    <header class="pvx phm pax-m paxl-l oh pos-rel bg-darkest-orange">
+    <header class="pvx phm pal-m paxl-l oh pos-rel">
     <div class="dt wi-100">
-      <div class="dtc wi-50 v-mid white">
-        <img src="/i/whitedots.png" class="v-mid mhn di-ns dn phn w4-ns w3" alt="Nat? Nat. Nat!">
+      <div class="dtc wi-50 v-mid">
+        <img src="/i/dots.png" class="v-mid mhn di-ns dn phn w4-ns w3" alt="Nat? Nat. Nat!">
         <div class="dib v-mid pas pan-ns">
-          <h1 class="man f3 f1-ns">Nat Welch</h1>
-          <h2 class="ttu f4 man">Software Reconnaissance Engineer</h2>
+          <h1 class="normal measure lh-copy man">Nat Welch</h1>
+          <h2 class="normal ttu f4 man">Software Reconnaissance Engineer</h2>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
     <main>
 
     <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
       <div>
         <h1 class="small ttu fw4">What</h1>
         <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
@@ -126,18 +126,18 @@
     </section>
 
     <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
       <div>
         <h1 class="small ttu fw4">Who</h1>
         <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
-        A <span id="age">28</span> year old from the San Francisco Bay Area, now living in Brooklyn.
+        A <span id="age">28</span> year old from the San Francisco Bay Area, now living in Brooklyn and working for <a href="https://hillaryclinton.com">Hillary For America</a>.
         </p>
       </div>
     </div>
     </section>
 
     <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
       <div>
         <h1 class="small ttu fw4">Writing</h1>
         <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
@@ -151,11 +151,24 @@
     </section>
 
     <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pax-m paxl-l plxl-xl">
+    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
       <div>
         <h1 class="small ttu fw4">Other</h1>
-        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
+        <p class="f5 f2-ns mw7 measure lh-copy">
         I post photos with varying consistency on <a href="https://www.flickr.com/photos/icco/">Flickr</a>.
+        </p>
+
+        <p class="f5 f2-ns mw7 measure lh-copy">
+        I try to be randomly clever on <a href="https://twitter.com/icco">Twitter</a>.
+        </p>
+
+        <p class="f5 f2-ns mw7 measure lh-copy">
+        I publish code on <a href="https://github.com/icco">Github</a>.
+        </p>
+
+        <p class="f5 f2-ns mw7 measure lh-copy">
+        My most well known projects are <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a> and <a href="https://github.com/fog/fog-google">fog-google</a>.
+        </p>
       </div>
     </div>
     </section>
